dark mode quick fixes

--- a/web_front/src/components/ChatListItem.css
+++ b/web_front/src/components/ChatListItem.css
@@ -1,6 +1,6 @@
-.chatListItem:hover {
+.chatListItem:hover, .chatListItem-selected {
     background-color: #e6f7ff;
 }
-.chatListItem-selected {
-    background-color: #e6f7ff;
+.chatListItemDark:hover, .chatListItem-selected-dark {
+    background-color: darkslateblue;
 }
